<resources>
    <string name="app_name" translatable="false">Tasky</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="error">Error</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due Date</string>
    <string name="db__open_fail">Database open failed</string>
    <string name="all_num">All tasks (%d)</string>
    <string name="title">Title</string>
    <string name="completed">Completed</string>
    <string name="note">Note</string>
    <string name="done">Done</string>
    <string name="edit_task">Edit task</string>
    <string name="create_task">Create task</string>
    <string name="empty_title">Title can\'t be empty</string>
    <string name="empty_title_confirmed">Enter title to save task</string>
    <string name="status">Status:</string>
    <string name="no_due_date">No due date</string>
    <string name="today">today</string>
    <string name="expired">expired</string>
    <string name="at">at</string>
    <string name="tomorrow">tomorrow</string>
    <string name="in">in</string>
    <string name="days">days</string>
    <string name="to_do">To do</string>
    <string name="new_task">New task</string>
    <string name="delete_all">Delete all tasks</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ok" translatable="false">OK</string>
    <string name="show_task">Show task</string>
    <string name="show_in_widget">Show in widget</string>
    <string name="settings">Settings</string>
    <string name="show_when">Show tasks</string>
    <string name="show_when_summary">Time span is relative regarding current date</string>
    <string name="select_time_span">Select time span</string>
    <string name="widget" translatable="false">Widget</string>
    <string name="no_tasks_here">No tasks here!</string>
    <string name="show_expired">Show expired tasks</string>

    <!--widget strings-->
    <string name="restart_scheduler_title">Restart update scheduler</string>
    <string name="scheduler_running">Scheduler running</string>
    <string name="scheduler_restarted">Scheduler restarted</string>
    <string name="last_update">Last update:</string>

    <string name="task_deleted">Task deleted</string>
    <string name="in_advance">in advance</string>

    <string-array name="time_span_values">
        <item>7 days</item>
        <item>1 months</item>
        <item>3 months</item>
        <item>1 years</item>
        <item>-1</item>
    </string-array>

    <string-array name="time_span_entries">
        <item>1 week</item>
        <item>1 month</item>
        <item>3 months</item>
        <item>1 year</item>
        <item>No limit</item>
    </string-array>

    <!--preferences keys-->
    <string name="pref_show_notifications_key" translatable="false">pref_show_notifications</string>
    <string name="pref_vibrate_key" translatable="false">pref_vibrate</string>
    <string name="pref_sound_key" translatable="false">pref_sound</string>
    <string name="pref_show_expired_key" translatable="false">pref_show_expired</string>
    <string name="pref_time_span_key" translatable="false">pref_time_span</string>
    <string name="pref_restart_scheduler_key" translatable="false">pref_restart_scheduler</string>
    <string name="pref_view_in_google_play_key" translatable="false">pref_view_in_google_play</string>
    <string name="pref_version_key" translatable="false">pref_version</string>

    <string name="show_notifications">Show notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>

    <string name="pref_time_span_default" translatable="false">-1</string>

    <string name="about">About</string>

    <string name="pref_view_in_google_play_title">View on Google Play</string>
    <string name="google_play_market" translatable="false">market://details?id=</string>
    <string name="google_play_url" translatable="false">https://play.google.com/store/apps/details?id=</string>

    <string name="pref_version_title">Version</string>
    <string name="pref_version_summary" translatable="false">1.0</string>
    <string name="reset">Reset</string>
    <string name="settings_reset">Settings reset</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="manage_categories">Manage categories</string>
    <string name="add_category">Add Category</string>
    <string name="no_categories_yet">No categories yet!</string>
    <string name="enter_title">Enter title</string>
    <string name="please_enter_title">Please enter category title</string>
    <string name="category_exists">Category already exists</string>
    <string name="category">Category</string>
    <string name="select_category">Select category</string>
    <string name="all">All tasks</string>
    <string name="others_num">Others (%d)</string>
    <string name="others">Others</string>

    <plurals name="delete_alert">
        <item quantity="one">You are about to delete %d task. Are you sure?</item>
        <item quantity="few">You are about to delete %d tasks. Are you sure?</item>
        <item quantity="other">You are about to delete %d tasks. Are you sure?</item>
    </plurals>

    <string name="nothing_to_delete">No tasks to delete</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="search_hint">Search tasks</string>
    <string name="reserved_title">Reserved category title</string>

    <string name="notifications">Notifications</string>
    <string name="repeat">Repeat task</string>
    <string name="date_must_be_selected">Date must be selected</string>
    <string name="widget_not_set">Widget is not set</string>
    <string name="checking_tasks">Checking tasks…</string>
    <string name="reboot_service">Reboot Service</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>

    <string-array name="repeating_options">
        <item>Once</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <string name="add_task">Add task</string>

    <!-- content description -->
    <string name="clear_task_date">Clear</string>
</resources>
