<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/widget">
        <SwitchPreference
            android:defaultValue="@bool/pref_show_completed_default"
            android:key="@string/pref_show_completed_key"
            android:title="@string/show_completed" />
        <SwitchPreference
            android:defaultValue="@bool/pref_show_expired_default"
            android:key="@string/pref_show_expired_key"
            android:summary="@string/show_expired_summary"
            android:title="@string/show_expired" />
        <ListPreference
            android:defaultValue="@string/pref_time_span_default"
            android:dialogTitle="@string/select_time_span"
            android:entries="@array/time_span_entries"
            android:entryValues="@array/time_span_values"
            android:key="@string/pref_time_span_key"
            android:title="@string/show_when" />
        <Preference
            android:key="@string/pref_restart_scheduler_key"
            android:title="@string/restart_scheduler_title" />
    </PreferenceCategory>
</PreferenceScreen>