<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/task_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_task_delete"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/task_save"
        android:title="@string/save"
        android:icon="@drawable/ic_task_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/task_show"
        android:title="@string/show_in_widget"
        android:checkable="true"/>

    <item
        android:id="@+id/task_cancel"
        android:title="@string/cancel"/>
</menu>