<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.70">

        <TextView
            android:id="@+id/tw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tw_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/tw_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

</LinearLayout>