<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:layout_margin="@dimen/paddingSmall">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.70"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingSmall"
            android:layout_marginTop="@dimen/paddingSmall"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textLarge" />

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingSmall"
            android:text="@string/note" />

        <TextView
            android:id="@+id/tvDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingSmall"
            android:text="@string/due_date" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingSmall" />

</LinearLayout>