<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sandra.tasky.activities.TaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:maxLength="80"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/cbTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/completed"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/note"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textSize="18sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/etDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:text="@string/due_date"
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskDate"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.5"
                android:maxWidth="90dp"
                android:minWidth="90dp"
                android:text="@string/select_date"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnClearDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/button_close"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskTime"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.5"
                android:maxWidth="90dp"
                android:minWidth="90dp"
                android:text="@string/select_time"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnClearTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/button_close"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
